<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="account_abnormal">Account exception</string>
    <string name="admin_cancel">Cancel admin</string>
    <string name="admin_cancel_hint">Are you sure you want to cancel your admin position?</string>
    <string name="admin_cancel_tips">%s has been canceled as an administrator</string>
    <string name="admin_canceling">Canceling admin ...</string>
    <string name="admin_label">A</string>
    <string name="admin_set">Set admin</string>
    <string name="admin_set_hint">Management can help you in the live ban unfriendly players, confirm the settings for the management of TA?</string>
    <string name="admin_set_tips">%s has been set as administrator</string>
    <string name="at_ta">@ TA</string>
    <string name="avatar_eidt_album">Album</string>
    <string name="avatar_eidt_camera">Take photo</string>
    <string name="bag_expect">Coming soon</string>
    <string name="bind_later">Talk later</string>
    <string name="bind_now">Right now</string>
    <string name="browse_large_image_get_avatar_fail">Fail to retrieve avatar, please retry later on</string>
    <string name="buy">purchase</string>
    <string name="click_to_refresh">Refresh</string>
    <string name="comment_hint">Say something ...</string>
    <string name="comment_send">Send</string>
    <string name="comment_too_long">Too lengthy, please streamline it</string>
    <string name="days_before">发表于%d天前</string>
    <string name="empty">There is nothing here</string>
    <string name="empty_input">Content can not be empty</string>
    <string name="exit_cancel">No predestination</string>
    <string name="exit_confirm">Pay attention to.</string>
    <string name="family_agree">Agree</string>
    <string name="family_agree_member">Do you agree %s to join your family?</string>
    <string name="family_agreed">Agreed</string>
    <string name="family_all_anchors">All anchors</string>
    <string name="family_all_members">All members</string>
    <string name="family_anchor_hint">Last week in top 3</string>
    <string name="family_applied">Has joined other families</string>
    <string name="family_apply">Apply</string>
    <string name="family_apply_fail">Apply fail</string>
    <string name="family_apply_full">Full</string>
    <string name="family_apply_success">Apply successfully, please wait for the notice</string>
    <string name="family_applying">Applying</string>
    <string name="family_badge">family badge</string>
    <string name="family_badge_contains_only_chinese">Badge can only contain Chinese</string>
    <string name="family_badge_hint">2 character</string>
    <string name="family_bugle_not_empty">The content of the announcement cannot be null</string>
    <string name="family_bugle_success">Publish successfully</string>
    <string name="family_bugle_too_short">The announcement is too short</string>
    <string name="family_card">Punch the clock</string>
    <string name="family_card_exp">Lead experience</string>
    <string name="family_card_exp_days">It has been continuously clocking%s days</string>
    <string name="family_card_get_exp">+%s experience</string>
    <string name="family_card_hint">The higher the level of family, get more experience</string>
    <string name="family_card_success">Clock success</string>
    <string name="family_contains_only_chinese_english">Family name can only contain Chinese or English</string>
    <string name="family_coupon">contribute %s</string>
    <string name="family_create">create(free time limit)</string>
    <string name="family_create_badge_not_equal">badge not equals 2 characters</string>
    <string name="family_create_con">Create (%s)</string>
    <string name="family_create_free">Time free</string>
    <string name="family_create_hint">Only whose level is larger than 30 can create a family</string>
    <string name="family_create_i_know">I know</string>
    <string name="family_create_name_at_least">Name at least 2 characters</string>
    <string name="family_create_name_at_most">name at most 8 charaters</string>
    <string name="family_create_notice_at_most">notice at most 256 characters</string>
    <string name="family_create_success">create family successfully</string>
    <string name="family_create_times_limit">One can create a family at most</string>
    <string name="family_create_title">Create Family</string>
    <string name="family_denied">Denied</string>
    <string name="family_deny">Deny</string>
    <string name="family_detail_publish">Post assembly(%1$s/%2$s)</string>
    <string name="family_edit">Edit family</string>
    <string name="family_edit_save">save</string>
    <string name="family_elite">Family elites</string>
    <string name="family_enter">Family:%s</string>
    <string name="family_expel">expel</string>
    <string name="family_expel_confirm">Do you confirm to expel this family member?</string>
    <string name="family_expel_fail">Expel fail</string>
    <string name="family_expel_success">Expel successfully</string>
    <string name="family_fame">fame %s</string>
    <string name="family_gather_dialog_notice">After the release, the member will be notified by the assembly number, and the success of the gathering will greatly increase the family reputation!</string>
    <string name="family_gather_hint">Try what time. Who lives in the live room?</string>
    <string name="family_gather_record">Gather record</string>
    <string name="family_gather_success">gather in「%s」\'s live room</string>
    <string name="family_head">Family head</string>
    <string name="family_help">Family introduction</string>
    <string name="family_ignore">Ignore</string>
    <string name="family_ignored">Ignored</string>
    <string name="family_join_times_limit">One can join a family at most</string>
    <string name="family_member">Family member</string>
    <string name="family_name">family name</string>
    <string name="family_name_hint">2-8 characters</string>
    <string name="family_no_anchor">No supported anchors</string>
    <string name="family_no_member">No members yet</string>
    <string name="family_no_rank">No rank</string>
    <string name="family_notice">family notice</string>
    <string name="family_notice_empty">The head is lazy so no notice is here.</string>
    <string name="family_notice_hint">at most 256 characters</string>
    <string name="family_publish">Release</string>
    <string name="family_quit">quit</string>
    <string name="family_quit_assign">Family head will be transfered to the member who has the most fame if you quit</string>
    <string name="family_quit_confirm">Do you confirm to exit this family?</string>
    <string name="family_quit_dismiss">Family will be dismissed if you quit</string>
    <string name="family_quit_fail">Exit fail</string>
    <string name="family_quit_success">Exit successfully</string>
    <string name="family_rank">No.%s</string>
    <string name="family_record_empty">No family gather records yet</string>
    <string name="family_support_anchor">Supported anchors</string>
    <string name="family_update_success">update family successfully</string>
    <string name="family_upload_avatar_hint">Pleast upload the family avatar</string>
    <string name="family_wait">Wait for you</string>
    <string name="family_warm_prompt">Warm prompt</string>
    <string name="family_week_list">Family week rank</string>
    <string name="game_fail_anchor">Guessing failure</string>
    <string name="live_permission_camera">Camera permission</string>
    <string name="live_permission_dialog_title">Live permissions below are necessary</string>
    <string name="live_permission_location">Location permission</string>
    <string name="live_permission_microphone">Microphone permission</string>
    <string name="live_start">Start Live</string>
    <string name="pay_withdraw">Withdraw</string>
    <string name="pay_withdraw_account">Withdraw account</string>
    <string name="pay_withdraw_ali">Alipay account</string>
    <string name="pay_withdraw_amount">Withdrawal amount</string>
    <string name="pay_withdraw_available">Available withdraw</string>
    <string name="pay_withdraw_condition">Single withdrawal must be greater than 640 gift certificates</string>
    <string name="pay_withdraw_exchange_limit">* Today has been mentioned more than 15 times now, and tomorrow mention it</string>
    <string name="pay_withdraw_exchange_money">Exchange amount</string>
    <string name="pay_withdraw_exchange_money_hint">Enter the withdrawal voucher amount which is automatically displayed</string>
    <string name="pay_withdraw_fill_in_account">Please enter Alipay account</string>
    <string name="pay_withdraw_fill_in_name">Please enter Real name</string>
    <string name="pay_withdraw_money_available">Money available(yuan)</string>
    <string name="pay_withdraw_money_info">%1$d withdraw, total %2$s yuan is pending, click to view details</string>
    <string name="pay_withdraw_name">Real name</string>
    <string name="pay_withdraw_record">Withdraw record</string>
    <string name="pay_withdraw_tips">1.If your phone number had bind more than one Ali account, please use Ali-email to fill in Alipay account;\n2.Notice of Withdrawal and FAQ, click the help button in the upper right corner of this page; \n3.More questions? Please contact the remix_live in WeChat Official Accounts.</string>
    <string name="pay_withdraw_today">Income today(yuan)</string>
    <string name="pay_withdraw_total">Income cumulative(yuan)</string>
    <string name="browse_all_candidates">浏览完全部的候选人员才可以开始投票哦</string>
    <string name="done">完成</string>
    <string name="enter_new_pwd">输入6-16位含数字与字母的新密码</string>
    <string name="enter_old_pwd">输入旧密码</string>
    <string name="foget_pwd">忘记密码</string>
    <string name="nearby_appear_time_15min">15分钟</string>
    <string name="nearby_appear_time_1day">1天</string>
    <string name="nearby_appear_time_3day">3天</string>
    <string name="nearby_appear_time_60min">60分钟</string>
    <string name="nearby_gender_all">全部</string>
    <string name="nearby_gender_female">女</string>
    <string name="nearby_gender_male">男</string>
    <string name="nearby_label_appear_time">出现时间</string>
    <string name="nearby_label_gender">性别</string>
    <string name="repeat_enter_pwd">重复输入一次新密码</string>
    <string name="run_for_group_manager">群大竞选</string>
    <string name="start_browse">开始浏览</string>
</resources>