<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:SettingItem="http://schemas.android.com/apk/res/qsbk.app" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:paddingLeft="15dp" android:paddingTop="12dp" android:paddingRight="15dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nearby_label_gender" style="@style/G_FONT_SMALL"/>
    <RadioGroup android:orientation="horizontal" android:id="@+id/id_gender_group" android:layout_width="match_parent" android:layout_height="28dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
        <RadioButton android:id="@+id/id_all" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/nearby_gender_all" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
        <ImageView android:background="@r$color/g_divider" android:layout_width="1dp" android:layout_height="match_parent" android:scaleType="fitXY"/>
        <RadioButton android:id="@+id/id_male" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/nearby_gender_male" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
        <ImageView android:background="@r$color/g_divider" android:layout_width="1dp" android:layout_height="match_parent" android:scaleType="fitXY"/>
        <RadioButton android:id="@+id/id_female" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/nearby_gender_female" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
    </RadioGroup>
    <ImageView android:background="@r$color/g_divider" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginBottom="10dp" android:scaleType="fitXY"/>
    <TextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nearby_label_appear_time" style="@style/G_FONT_SMALL"/>
    <RadioGroup android:orientation="horizontal" android:id="@+id/id_time_group" android:layout_width="match_parent" android:layout_height="28dp" android:layout_marginTop="10dp">
        <RadioButton android:id="@+id/id_15min" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/nearby_appear_time_15min" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
        <ImageView android:background="@r$color/g_divider" android:layout_width="1dp" android:layout_height="match_parent" android:scaleType="fitXY"/>
        <RadioButton android:id="@+id/id_60min" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/nearby_appear_time_60min" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
        <ImageView android:background="@r$color/g_divider" android:layout_width="1dp" android:layout_height="match_parent" android:scaleType="fitXY"/>
        <RadioButton android:id="@+id/id_1day" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/nearby_appear_time_1day" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
        <ImageView android:background="@r$color/g_divider" android:layout_width="1dp" android:layout_height="match_parent" android:scaleType="fitXY"/>
        <RadioButton android:id="@+id/id_3day" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/nearby_appear_time_3day" android:layout_weight="1" style="@style/NearbySelectCheckboxStyle"/>
    </RadioGroup>
</LinearLayout>
