<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:SettingItem="http://schemas.android.com/apk/res/qsbk.app" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/bg_corner_6dp_white" android:paddingLeft="40dp" android:paddingTop="41dp" android:paddingRight="40dp" android:paddingBottom="28dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp">
        <TextView android:textSize="@dimen/live_text_14sp" android:textColor="#b0abb7" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/live_permission_dialog_title"/>
        <TextView android:textSize="@dimen/live_text_14sp" android:textColor="#41364f" android:gravity="center_vertical" android:id="@+id/tv_permission_camera" android:paddingLeft="56dp" android:layout_width="220dp" android:layout_height="38dp" android:layout_marginTop="30dp" android:text="@string/live_permission_camera" android:drawablePadding="10dp"/>
        <TextView android:textSize="@dimen/live_text_14sp" android:textColor="#41364f" android:gravity="center_vertical" android:id="@+id/tv_permission_microphone" android:paddingLeft="56dp" android:layout_width="220dp" android:layout_height="38dp" android:layout_marginTop="11dp" android:text="@string/live_permission_microphone" android:drawablePadding="10dp"/>
        <TextView android:textSize="@dimen/live_text_14sp" android:textColor="#41364f" android:gravity="center_vertical" android:id="@+id/tv_permission_location" android:paddingLeft="56dp" android:layout_width="220dp" android:layout_height="38dp" android:layout_marginTop="11dp" android:text="@string/live_permission_location" android:drawablePadding="10dp"/>
        <TextView android:textSize="@dimen/live_text_14sp" android:textColor="@color/black" android:gravity="center" android:id="@+id/tv_start_live" android:background="@drawable/bg_simpledialog_btn_gray_corner" android:padding="10dp" android:layout_width="220dp" android:layout_height="38dp" android:layout_marginTop="36dp" android:text="@string/live_start"/>
    </LinearLayout>
    <com.facebook.drawee.view.SimpleDraweeView android:layout_gravity="center_horizontal" android:id="@+id/iv_avatar" android:background="@drawable/avatar_bg_mask_2dp" android:padding="2dp" android:layout_width="60dp" android:layout_height="60dp"/>
</FrameLayout>
