<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:SettingItem="http://schemas.android.com/apk/res/qsbk.app" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="?attr/setting_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:textSize="16sp" android:id="@+id/old_pwd" android:background="@null" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:hint="@string/enter_old_pwd" android:maxLength="16" android:inputType="textPassword" style="?attr/edit_txt"/>
    <View android:background="?attr/dividerColor" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
    <EditText android:textSize="16sp" android:id="@+id/new_pwd" android:background="@null" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:hint="@string/enter_new_pwd" android:maxLength="16" android:inputType="textPassword" style="?attr/edit_txt"/>
    <View android:background="?attr/dividerColor" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
    <EditText android:textSize="16sp" android:id="@+id/repeat_pwd" android:background="@null" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:hint="@string/repeat_enter_pwd" android:maxLength="16" android:inputType="textPassword" style="?attr/edit_txt"/>
    <View android:background="?attr/dividerColor" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
    <Button android:enabled="false" android:textSize="16sp" android:textColor="@r$color/col_text_btn_bind" android:layout_gravity="center_horizontal" android:id="@+id/submit" android:background="?attr/bind_btn_bg" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="20dp" android:layout_marginTop="30dp" android:layout_marginRight="20dp" android:text="@string/done"/>
    <TextView android:textSize="14sp" android:textColor="?attr/color_gray" android:layout_gravity="center_horizontal" android:id="@+id/forget_pwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/foget_pwd"/>
</LinearLayout>
