<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:SettingItem="http://schemas.android.com/apk/res/qsbk.app" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/run_for_group_manager"/>
    <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/browse_all_candidates"/>
    <ImageView android:layout_gravity="center" android:background="@drawable/group_master_election_poster" android:layout_width="223dp" android:layout_height="130dp" android:layout_marginTop="24dp"/>
    <TextView android:textSize="14dp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@+id/tv_browse_btn" android:layout_width="200dp" android:layout_height="40dp" android:layout_marginTop="44dp" android:text="@string/start_browse" android:singleLine="true" style="?attr/manager_vote_btn"/>
</LinearLayout>
